--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 <body>
     <h1>Bienvenido</h1>
     <p>Hola Mundo</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-         Suscipit officia eveniet blanditiis similique saepe et sit quos 
-         laboriosam magnam consequatur explicabo, totam sint odit perferendis
-          a commodi perspiciatis est quis.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, inventore? Molestias molestiae id 
+        consequuntur quo consectetur hic 
+        non magnam laudantium itaque, architecto, assumenda, eius nam facere quae aliquid accusantium iusto.</p>
 </body>
 </html>
